# Practica_2_prob_2

./: CMakeLists.txt  combinacion.cpp  combinacion.h  main.cpp
